name:                coin1
version:             0.1.0.0
build-type:          Simple
cabal-version:       1.12

executable coin1-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  build-depends:       base, network, conduit, conduit-extra, bytestring, attoparsec, bytestring, transformers, mtl
  default-language:    Haskell2010

